syntax = "proto3";
import "google/protobuf/timestamp.proto";
package api;

message Entities {
    repeated Entity entity = 1;
}

message Entity {
    uint32 id = 1;
    EntityType media_type = 2;
    string path = 3;
    string thumbnail_path = 4;
    string preview_path = 5;
    google.protobuf.Timestamp uploaded = 6;

    google.protobuf.Timestamp created = 7;
    Location location = 8;

    enum EntityType {
        IMAGE = 0;
        VIDEO = 1;
    }

    message Location {
        double longitude = 1;
        double latitude = 2;
    }
}